--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,34 +1,34 @@
+---
 name: "CI"
 on: ["push", "pull_request"]
 
 jobs:
-  ci:
-	name: "Linting"
-	strategy:
-	  fail-fast: false
-	  matrix:
-		os: ["ubuntu-latest"]
-		go: ["1.16.x", "1.17.x"]
+  lint:
+    strategy:
+      fail-fast: false
+      matrix:
+        os: ["ubuntu-latest"]
+        go: ["1.16.x", "1.17.x"]
 
-	runs-on: ${{ matrix.os }}
+    runs-on: ${{ matrix.os }}
 
-	steps:
-    - name: Checking out the code
-      uses: actions/checkout@v2
+    steps:
+      - name: Checking out the code
+        uses: actions/checkout@v2
 
-    - name: Setting up Go
-      uses: WillAbides/setup-go-faster@v1.7.0
-      with:
-        go-version: ${{ matrix.go }}
-
-    - name: Testing Go Code
-      run: "go test ./..."
-
-    - name: Running go Vet
-      run: "go vet ./..."
-
-    - uses: dominikh/staticcheck-action@v1.1.0
+      - name: Setting up Go
+        uses: WillAbides/setup-go-faster@v1.7.0
         with:
-        version: "2021.1.1"
-        install-go: false
-        cache-key: ${{ matrix.go }}
+          go-version: ${{ matrix.go }}
+
+      - name: Testing Go Code
+        run: "go test ./..."
+
+      - name: Running go Vet
+        run: "go vet ./..."
+
+      - uses: dominikh/staticcheck-action@v1.1.0
+        with:
+          version: "2021.1.1"
+          install-go: false
+          cache-key: ${{ matrix.go }}
